      has been changed from \code{0L} to \code{NA_integer_}.
      (\PR{14754})

      \item The \code{exportMethods} directive in a \file{NAMESPACE}
      file now exports S4 generics as necessary, as the extensions
      manual said it does.  The manual has also been updated to be a
      little more informative on this point.

      \item Reference methods cannot safely use non-exported entries
      in the namespace.  We now do not do so, and warn in the documentation.

      \item The namespace import code was warning when identical
      S4 generic functions were imported more than once, but should
      not (reported by Brian Ripley, then Martin Morgan).

      \item \code{merge()} is no longer allowed to create a data frame
      with duplicate column names (which confused \PR{14786}).

      \item Fixes for rendering raster images on X11 and Windows devices
      when the x-axis or y-axis scale is reversed.
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The internal \code{untar()} (as used by default by
      \command{R CMD INSTALL}) now knows about some \command{pax}
      headers which \command{bsdtar} (e.g., the default \command{tar} for
      Mac OS >= 10.6) can incorrectly include in \command{tar} files,
      and will skip them with a warning.

      \item PCRE has been upgraded to version 8.21: as well as bug fixes
      and greater Perl compatibility, this adds a JIT pattern compiler,
      about which PCRE's news says
      \sQuote{large performance benefits can be had in many situations}.
      This is supported on most but not all \R platforms.

      \item Function \code{compactPDF()} in package \pkg{tools} now
      takes the default for argument \code{gs_quality} from environment
      variable \env{GS_QUALITY}: there is a new value \code{"none"}, the
      ultimate default, which prevents GhostScript being used in